logs/laph.log
[2025-12-04 20:26:58] === Iteration 1 ===
[2025-12-04 20:26:58] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914a2660>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmps13pqg8a.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914a2660>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 2 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914c7250>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpdilbzjq2.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914c7250>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 3 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914c7b10>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpnrhuk5uw.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a914c7b10>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 4 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91732fd0>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpd91rq9if.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91732fd0>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 5 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a917336f0>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmp9c0gntvt.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a917336f0>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 6 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91510950>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpdqdbwa03.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91510950>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 7 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538380>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmp_t1_cbmr.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538380>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 8 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538af0>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpgmnxczk2.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538af0>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 9 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91539040>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmp266_o864.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91539040>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

[2025-12-04 20:26:59] === Iteration 10 ===
[2025-12-04 20:26:59] Generated code:
[LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538e20>: Failed to establish a new connection: [Errno 111] Connection refused'))
[2025-12-04 20:26:59] STDOUT:

[2025-12-04 20:26:59] STDERR:
  File "/tmp/tmpron58fy_.py", line 1
    [LLM ERROR] HTTPConnectionPool(host='localhost', port=11343): Max retries exceeded with url: /apt/chat/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f4a91538e20>: Failed to establish a new connection: [Errno 111] Connection refused'))
     ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

